# drain

./: 404  Cargo.toml  README.md  config.json  index  main.css
.github/workflows/: rust.yml
dynamic_pages/: Cargo.toml
dynamic_pages/src/: forbidden.rs  index.rs  lib.rs  not_found.rs
src/: cgi.rs  config.rs  db.rs  endpoints.rs  error.rs  main.rs  requests.rs  ssl.rs  util.rs
src/pages/: bad_gateway.rs  forbidden.rs  index_of.rs  internal_server_error.html  internal_server_error.rs  mod.rs  not_found.rs  select.rs
