[package]
name = "drain"
version = "0.6.5"
edition = "2021"
repository = "https://github.com/fooooter/drain"
license = "LGPL-3.0-or-later"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
tokio-openssl = "0.6.5"
openssl = "0.10.68"
chrono = "0.4.34"
regex = "1.10.3"
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
glob = "0.3.1"
mime_guess = "2.0.5"
flate2 = "1.0.34"
brotli = "7.0.0"
libloading = "0.8.5"
bytes = "1.8.0"
bstr = "1.11.1"
drain_common = { git = "https://github.com/fooooter/drain_common" }