[package]
name = "drain_server"
description = "A WIP web server/framework."
version = "1.4.5"
edition = "2024"
repository = "https://github.com/fooooter/drain"
license = "LGPL-3.0-or-later"
readme = "README.md"
keywords = ["server", "http", "dynamic", "webdev"]

[features]
default = []
cgi = []

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
tokio-openssl = "0.6.5"
openssl = "0.10.71"
chrono = "0.4.39"
regex = "1.11.1"
serde_json = "1.0.139"
serde = { version = "1.0.218", features = ["derive"] }
glob = "0.3.2"
mime_guess = "2.0.5"
flate2 = "1.0.35"
brotli = "7.0.0"
libloading = "0.8.6"
bytes = "1.10.0"
bstr = "1.11.3"
urlencoding = "2.1.3"
drain_common = "0.7.0"